--- a/krimis/sears.html
+++ b/krimis/sears.html
@@ -15,7 +15,7 @@
 			<div class="hero">
 	<div class="logo is-center is-vertical-align">
 		<img src="/img/mixc.svg" alt="">
-		<h4 class="text-grey"> Krimiserien - Craig Russell</h4>
+		<h4 class="text-grey"> Krimiserien - Michael Sears</h4>
  	</div>
 	<hr style="height:2px; margin-top:8px; margin-bottom:0px;"/>
 </div>
@@ -26,49 +26,35 @@
 						<a class="active" href="/index.html">⌾ Startseite</a>
 					</div>
 			</nav>		
-      <h2 id="craig-russell">Craig Russell</h2>
+      <h2 id="michael-sears">Michael Sears</h2>
 
-<p><a href="https://de.wikipedia.org/wiki/Craig_Russell_(Autor)" target="_blank">Craig Russell</a>
-ist ein britischer Autor.</p>
+<p>Michael Sears
+ist ein amerikanischer Autor:
+<a href="https://michaelsears.com" target="_blank">Homepage</a></p>
 
-<h4 id="jan-fabel-reihe">Jan-Fabel-Reihe</h4>
+<h4 id="jason-stafford-reihe">Jason-Stafford-Reihe</h4>
 
 <ul>
-  <li>2005: Blood Eagle (dt. Blutadler)</li>
-  <li>2006: Brother Grimm (dt. Wolfsfährte)</li>
-  <li>2007: Eternal (dt. Brandmal)</li>
-  <li>2009: The Carnival Master (dt. Carneval)</li>
-  <li>2009: The Valyrie Song (dt. Walküre)</li>
-  <li>2011: A Fear of Dark Water (dt. Tiefenangst)</li>
-  <li>2015: The Ghosts of Altona (dt. Auferstehung)</li>
+  <li>2012: <em>Black Fridays</em></li>
+  <li>2013: Mortal Bonds</li>
+  <li>2015: Long Way Down</li>
+  <li>2017: Saving Jason</li>
 </ul>
 
-<h4 id="lennox-reihe">Lennox-Reihe</h4>
+<h4 id="ted-molloy-reihe">Ted-Molloy-Reihe</h4>
 
 <ul>
-  <li>2009: Lennox (dt. Lennox)</li>
-  <li>2010: The Long Glasgow Kiss (dt. Lennox’ Rückkehr)</li>
-  <li>2011: The Deep Dark Sleep (dt. Lennox’ Der Dunkle Schlaf)</li>
-  <li>2012: Dead Men and Broken Hearts</li>
-  <li>2016: The Quiet Death of Thomas Quaid</li>
-</ul>
-
-<h4 id="weitere-romane">Weitere Romane</h4>
-
-<ul>
-  <li>2014: Biblical</li>
-  <li>2019: The Devil Aspect</li>
-  <li>2021: Hyde</li>
+  <li>2021: Tower of Babel</li>
 </ul>
 
 <!-- previous and next page -->
 <nav class="nav">
 	<div class="nav-right">
 	
-	<a class="active" href="rankin">&lt; Ian Rankin</a>
+	<a class="active" href="russell">&lt; Craig Russell</a>
 	
 	
-	<a class="active" href="sears">Michael Sears &gt;</a>
+	<a class="active" href="silva">Daniel Silva &gt;</a>
 	
 	</div>
 </nav>
