--- a/krimis/russell.html
+++ b/krimis/russell.html
@@ -38,7 +38,7 @@ ist ein britischer Autor.</p>
   <li>2006: Brother Grimm (dt. Wolfsfährte)</li>
   <li>2007: Eternal (dt. Brandmal)</li>
   <li>2009: The Carnival Master (dt. Carneval)</li>
-  <li>2009: The Valyrie Song (dt. Walküre)</li>
+  <li>2009: The Valkyrie Song (dt. Walküre)</li>
   <li>2011: A Fear of Dark Water (dt. Tiefenangst)</li>
   <li>2015: The Ghosts of Altona (dt. Auferstehung)</li>
 </ul>
