favicon from github

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<!-- <link rel="stylesheet" href="/css/chota.css"> -->
 		<link rel="stylesheet" href="/css/chota.min.css">
     <link rel="stylesheet" href="/css/mixc.css">
-		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-		<link rel="icon" type="image/x-icon" href="/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="https://mixcellanea.github.io/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="https://mixcellanea.github.io/favicon.ico">
   </head>
   <body>
     <div class="container">
