--- a/krimis/bailey.html
+++ b/krimis/bailey.html
@@ -14,7 +14,8 @@
     <div class="container">
 			<div class="hero">
 	<div class="logo is-center is-vertical-align">
-		<img src="/img/mixc.svg" alt="">
+		<a href="/index.html"> <img src="/img/mixc.svg" alt="Banner
+			Miscellanea"></a> 
 		<h4 class="text-grey"> Krimiserien - Robert Bailey</h4>
  	</div>
 	<hr style="height:2px; margin-top:8px; margin-bottom:0px;"/>
