--- a/krimis/smith.html
+++ b/krimis/smith.html
@@ -16,7 +16,7 @@
 	<div class="logo is-center is-vertical-align">
 		<a href="/index.html"> <img src="/img/mixc.svg" alt="Banner
 			Miscellanea"></a> 
-		<h4 class="text-grey"> Krimiserien - Daniel Silva</h4>
+		<h4 class="text-grey"> Krimiserien - Roger Smith</h4>
  	</div>
 	<hr style="height:2px; margin-top:8px; margin-bottom:0px;"/>
 </div>
@@ -27,59 +27,34 @@
 						<a class="active" href="/index.html">⌾ Startseite</a>
 					</div>
 			</nav>		
-      <h2 id="daniel-silva">Daniel Silva</h2>
+      <h2 id="roger-smith">Roger Smith</h2>
 
-<p><a href="https://de.wikipedia.org/wiki/Daniel_Silva_(Autor)" target="_blank">Daniel Silva</a>
-ist ein amerikanischer Autor:
-<a href="https://danielsilvabooks.com" target="_blank">Homepage</a></p>
+<p><a href="https://de.wikipedia.org/wiki/Roger_Smith_(Autor)" target="_blank">Roger Smith</a>
+ist ein südafrikanischer Autor.</p>
 
-<h4 id="michael-osbourne-reihe">Michael-Osbourne-Reihe</h4>
-
-<ul>
-  <li>1998: The Mark of the Assassin (dt. Der Maler)</li>
-  <li>1999: The Marching Season (dt. Der Botschafter)</li>
-</ul>
-
-<h4 id="gabriel-allonreihe">Gabriel-Allon–Reihe</h4>
+<h4 id="romane">Romane</h4>
 
 <ul>
-  <li>2000: <em>The Kill Artist</em> (dt. Der Auftraggeber)</li>
-  <li>2002: <em>The English Assassin</em> (dt. Der Engländer)</li>
-  <li>2003: <em>The Confessor</em> (dt. Die Loge)</li>
-  <li>2004: <em>A Death in Vienna</em> (dt. Der Zeuge)</li>
-  <li>2005: <em>Prince of Fire</em> (dt. Der Schläfer)</li>
-  <li>2006: <em>The Messenger</em> (dt. Das Terrornetz)</li>
-  <li>2007: <em>The Secret Servant</em> (dt. Gotteskrieger)</li>
-  <li>2008: _ Moscow Rules_ (dt. Das Moskau-Komplott)</li>
-  <li>2009: <em>The Defector</em> (dt. Der Oligarch)</li>
-  <li>2010: <em>The Rembrandt Affair</em> (dt. Die Rembrandt-Affäre)</li>
-  <li>2011: <em>Protrait Of A Spy</em> (dt. Der Hintermann)</li>
-  <li>2012: <em>The Fallen Angel</em> (dt. Das Attentat)</li>
-  <li>2013: <em>The English Girl</em> (dt. Das englische Mädchen)</li>
-  <li>2014: The Heist (dt. Der Raub)</li>
-  <li>2015: The English Spy (dt. Der englische Spion)</li>
-  <li>2016: The Black Widow (dt. Die Attentäterin)</li>
-  <li>2017: House of Spies (dt. Der Drahtzieher)</li>
-  <li>2018: The Other Woman (dt. Der russísche Spion)</li>
-  <li>2019: The New Girl (dt. Das Vermächtnis)</li>
-  <li>2020: The Order (dt. Der Geheimbund)</li>
-  <li>2021: The Cellist</li>
-</ul>
-
-<h4 id="weiterer-roman">Weiterer Roman</h4>
-
-<ul>
-  <li>1996: <em>The Unlikely Spy</em> (dt. Double Cross – Falsches Spiel)</li>
+  <li>2009: <em>Mixed Blood</em> (dt. Kap der Finsternis)</li>
+  <li>2010: <em>Wake Up Dead</em> (dt. Blutiges Erwachen)</li>
+  <li>2010: Dust Devils (dt. Staubige Hölle)</li>
+  <li>2012: Capture (dt. Stiller Tod)</li>
+  <li>2012: Ishmael Toffee (dt. Ishmael Toffee)</li>
+  <li>2012: Vile Bolld (unter dem Pseudonym Max Wilde (dt. Schwarzes Blut)</li>
+  <li>2013: Sacrifies (dt. Leichtes Opfer)</li>
+  <li>2014: Man Down (dt. Mann am Boden)</li>
+  <li>2016: Nowhere</li>
+  <li>2016: The Truth Itself (dt. Sie werden dich finden)</li>
 </ul>
 
 <!-- previous and next page -->
 <nav class="nav">
 	<div class="nav-right">
 	
-	<a class="active" href="sears">&lt; Michael Sears</a>
+	<a class="active" href="silva">&lt; Daniel Silva</a>
 	
 	
-	<a class="active" href="smith">Roger Smith &gt;</a>
+	<a class="active" href="stone">Nick Stone &gt;</a>
 	
 	</div>
 </nav>
