--- a/krimis.html
+++ b/krimis.html
@@ -99,7 +99,7 @@
       <hr />
 
       <ul>
-        <li><a href="/krimis/diverse">Diverse Autoren</a></li>
+        <li><a href="/krimis/weitere">Weitere Autoren</a></li>
       </ul>
     </div>
 </div>
