--- a/krimis/winslow.html
+++ b/krimis/winslow.html
@@ -16,7 +16,7 @@
 	<div class="logo is-center is-vertical-align">
 		<a href="/index.html"> <img src="/img/mixc.svg" alt="Banner
 			Miscellanea"></a> 
-		<h4 class="text-grey"> Krimiserien - John Verdon</h4>
+		<h4 class="text-grey"> Krimiserien - Don Winslow</h4>
  	</div>
 	<hr style="height:2px; margin-top:8px; margin-bottom:0px;"/>
 </div>
@@ -27,31 +27,56 @@
 						<a class="active" href="/index.html">⌾ Startseite</a>
 					</div>
 			</nav>		
-      <h2 id="john-verdon">John Verdon</h2>
+      <h2 id="don-winslow">Don Winslow</h2>
 
-<p><a href="https://en.wikipedia.org/wiki/John_Verdon" target="_blank">John Verdon</a>
-ist ein amerikanischer Autor: <a href="https://www.johnverdon.net/pages/index.php" target="_blank">Homepage</a></p>
+<p><a href="https://de.wikipedia.org/wiki/Don_Winslow" target="_blank">Don Winslow</a>
+ist ein amerikanischer Autor: <a href="https://don-winslow.com" target="_blank">Homepage</a></p>
 
-<h4 id="dave-gurney-reihe">Dave-Gurney-Reihe</h4>
+<h4 id="neal-carey-reihe">Neal-Carey-Reihe</h4>
 
 <ul>
-  <li>2011: <em>Think of a Number</em> (dt. Die Handschrift des Todes)</li>
-  <li>2012: <em>Shut Your Eyes Thight</em> (dt. Schließe deine Augen)</li>
-  <li>2013: <em>Let the Devil Sleep</em> (dt. Gute Nacht)</li>
-  <li>2014: <em>Peter Pan Must Die</em> (dt. Die Unbarmherzigkeit des Augenblicks)</li>
-  <li>2016: Wolf Lake</li>
-  <li>2017: White River Burning</li>
-  <li>2021: On Harrow Hill</li>
+  <li>1991: A Cool Breeze on the Underground (dt. London Undercover)</li>
+  <li>1992: The Trail to Buddha’s Mirror (dt. China Girl)</li>
+  <li>1993: Way Down (dt. Way Down on the High Lonely)</li>
+  <li>1994: A Long Walk Up the Water Slide (dt. A Long Walk Up the Water
+  Slide)</li>
+  <li>1996: While Drowning in the Desert (dt. Palm Desert)</li>
+</ul>
+
+<h4 id="die-kartell-saga">Die Kartell-Saga</h4>
+
+<ul>
+  <li>2005: <em>The Power of the Dog</em> (dt. <a href="https://de.wikipedia.org/wiki/Tage_der_Toten" target="_blank">Tage der Toten</a>)</li>
+  <li>2015: The Cartel (dt. <a href="https://de.wikipedia.org/wiki/Das_Kartell_(Roman)" target="_blank">Das Kartell</a>)</li>
+  <li>2019: The Border (dt. Jahre des Jägers)</li>
+</ul>
+
+<h4 id="weitere-romane">Weitere Romane</h4>
+
+<ul>
+  <li>1996: Isle of Joy (dt. Manhattan)</li>
+  <li>1997: Death and Life of Bobby Z (dt. Bobby Z.)</li>
+  <li>1996: California Fire and Life (dt. Die Sprache des Feuers)</li>
+  <li>2006: The Winter of Frankie Machine (dt. Frankie Machine)</li>
+  <li>2008: The Dawn Patrol (dt. Pacific Private)</li>
+  <li>2009: The Gentlemen’s Hour (dt. Pacific Paradise)</li>
+  <li>2010: Savages (dt. Savages – Zeit des Zorns)</li>
+  <li>2011: <em>Satori</em> (dt. Satori)</li>
+  <li>2012: The Kings of Cool (dt. Kings of Cool)</li>
+  <li>2014: Vengeance (dt. Vergeltung)</li>
+  <li>2014: Missing, New York (dt. Missing. NewYork)</li>
+  <li>2016: Germany (dt. Germany)</li>
+  <li>2017: The Force (dt. Corruption)</li>
 </ul>
 
 <!-- previous and next page -->
 <nav class="nav">
 	<div class="nav-right">
 	
-	<a class="active" href="turow">&lt; Scott Turow</a>
+	<a class="active" href="verdon">&lt; John Verdon</a>
 	
 	
-	<a class="active" href="winslow">Don Winslow &gt;</a>
+	<a class="active" href="weitere">Weitere Autoren &gt;</a>
 	
 	</div>
 </nav>
