--- a/krimis/meyer.html
+++ b/krimis/meyer.html
@@ -42,7 +42,7 @@ ist ein südafrikanischer Autor: <a href="http://www.deonmeyer.com" target="_bla
   <li>2015: <em>Icarus</em> (dt. Icarus)</li>
   <li>2017: The Woman in the Blue Cloak (dt. Die Amerikanerin)</li>
   <li>2018: <em>The Last Hunt</em> (dt. Beute)</li>
-  <li>2020: Dinkerdrif</li>
+  <li>2021: The Dark Flood (dt. Todsünde)</li>
 </ul>
 
 <h4 id="weitere-romane">Weitere Romane</h4>
