--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- <link rel="stylesheet" href="/css/chota.css"> -->
 		<link rel="stylesheet" href="/css/chota.min.css">
     <link rel="stylesheet" href="/css/mixc.css">
-		<link rel="shortcut icon" type="image/x-icon" href="https://mixcellanea.github.io/favicon.ico">
 		<link rel="icon" type="image/x-icon" href="https://mixcellanea.github.io/favicon.ico">
   </head>
   <body>
@@ -66,7 +64,7 @@
 <div class="card" style="margin-top:3rem;">
 <div class="row">
 	<div class="col-2">
-		<a href="index.html" target=""><img src="/img/studer.jpg" width="120" style="margin-right:0.5rem; margin-top:0.8rem;" /></a>
+		<a href="studer.html" target=""><img src="/img/studer.jpg" width="120" style="margin-right:0.5rem; margin-top:0.8rem;" /></a>
 	</div>
 	<div class="col">
 		<p>Brigitte Studer: <em>Reisende der Weltrevolution: Eine
@@ -82,7 +80,7 @@
 	</div>
 </div>
 	 <footer class="is-right">
-		 <a class="button primary outline" href="index.html" target="">Demnächst</a>
+		 <a class="button primary outline" href="studer.html" target="">Öffnen</a>
   </footer>
 </div>
 
