--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="card" style="margin-top:3rem;">
 <div class="row">
 	<div class="col-2">
-		<a href="studer.html" target=""><img src="/img/studer.jpg" width="120" style="margin-right:0.5rem; margin-top:0.8rem;" /></a>
+		<a href="index.html" target=""><img src="/img/studer.jpg" width="120" style="margin-right:0.5rem; margin-top:0.8rem;" /></a>
 	</div>
 	<div class="col">
 		<p>Brigitte Studer: <em>Reisende der Weltrevolution: Eine
@@ -80,7 +80,7 @@
 	</div>
 </div>
 	 <footer class="is-right">
-		 <a class="button primary outline" href="studer.html" target="">Öffnen</a>
+		 <a class="button primary outline" href="index.html" target="">Demnächst</a>
   </footer>
 </div>
 
@@ -119,11 +119,12 @@
 		<footer>
 	<hr style="height:2px; margin-top:24px; margin-bottom:8px;"/>
 	<div class="row">
-  <div class="col text-left text-grey"> Miscellanea von <a
-			 href="https://github.com/mixcellanea"
-			 target="_blank">Mixcellanea</a> <br/> mit Hilfe von <a
-				href="https://jekyllrb.com" target="_blank">Jekyll</a> und <a
-				href="https://jenil.github.io/chota/" target=_blank">chota</a>.</div>
+	<div class="col text-left text-grey"> Miscellanea von 
+		<a href="https://github.com/mixcellanea"
+			 target="_blank">Mixcellanea</a> <br/> mit Hilfe von 
+	  <a href="https://www.gnu.org/software/m4/" target="_blank">M4</a>, 
+		<a href="https://jekyllrb.com" target="_blank">Jekyll</a> und 
+		<a href="https://jenil.github.io/chota/" target=_blank">chota</a>.</div>
 	<div class="col text-right"><a href="#top">⬆︎ Zum Anfang</a> <br/> 
 		<a href="javascript:void(0)" id="theme-switch"
 			onclick="switchMode(this)">☀️ Modus</a>
