--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="card" style="margin-top:3rem;">
 <div class="row">
 	<div class="col-2">
-		<a href="index.html" target=""><img src="/img/studer.jpg" width="120" style="margin-right:0.5rem; margin-top:0.8rem;" /></a>
+		<a href="studer.html" target=""><img src="/img/studer.jpg" width="120" style="margin-right:0.5rem; margin-top:0.8rem;" /></a>
 	</div>
 	<div class="col">
 		<p>Brigitte Studer: <em>Reisende der Weltrevolution: Eine
@@ -80,7 +80,7 @@
 	</div>
 </div>
 	 <footer class="is-right">
-		 <a class="button primary outline" href="index.html" target="">Demnächst</a>
+		 <a class="button primary outline" href="studer.html" target="">Öffnen</a>
   </footer>
 </div>
 
