--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 	</div>
 </div>
 	 <footer class="is-right">
-		 <a class="button primary outline" href="studer.html" target="">Öffnen</a>
+		 <a class="button primary outline" href="index.html"
+			 target="">Demnächst</a>
   </footer>
 </div>
 
