--- a/krimis/iles.html
+++ b/krimis/iles.html
@@ -40,7 +40,7 @@ ist ein amerkanischer Autor: <a href="https://www.gregiles.com" target="_blank">
   <li>2009: The Devil’s Punchbowl (dt. Adrenalin)</li>
   <li>2014: <em>Natchez Burning</em> (dt. Natchez Burning)</li>
   <li>2015: <em>The Bone Tree</em> (dt. Die Toten von Natchez)</li>
-  <li>2017: Mississippi Blood (dt. Die Sünden von Natchez)</li>
+  <li>2017: <em>Mississippi Blood</em> (dt. Die Sünden von Natchez)</li>
 </ul>
 
 <h4 id="mississippi-reihe">Mississippi-Reihe</h4>
