--- a/krimis/box.html
+++ b/krimis/box.html
@@ -79,7 +79,7 @@ Wikipedia</a>.</p>
   <li>2013: <em>The Highway</em></li>
   <li>2015: <em>Badlands</em></li>
   <li>2017: <em>Paradise Valley</em></li>
-  <li>2019: The Bitteroots</li>
+  <li>2019: <em>The Bitteroots</em></li>
 </ul>
 
 <h4 id="weitere-romane">Weitere Romane</h4>
