weitere Bücher von Bannalec gelesen

--- a/krimis/bannalec.html
+++ b/krimis/bannalec.html
@@ -45,11 +45,11 @@ die Bretagne und Krimi mit viel Lokalkolorit.</p>
   <li>2012: <em>Bretonische Verhältnisse</em></li>
   <li>2013: <em>Bretonische Brandung</em></li>
   <li>2014: <em>Bretonisches Gold</em></li>
-  <li>2015: Bretonischer Stolz</li>
-  <li>2016: Bretonische Flut</li>
-  <li>2017: Bretonisches Leuchten</li>
-  <li>2018: Bretonische Geheimnisse</li>
-  <li>2019: Bretonisches Vermächtnis</li>
+  <li>2015: <em>Bretonischer Stolz</em></li>
+  <li>2016: <em>Bretonische Flut</em></li>
+  <li>2017: <em>Bretonisches Leuchten</em></li>
+  <li>2018: <em>Bretonische Geheimnisse</em></li>
+  <li>2019: <em>Bretonisches Vermächtnis</em></li>
   <li>2020: Bretonische Spezialitäten</li>
   <li>2021: Bretonische Idylle</li>
 </ul>
