--- a/krimis/bannalec.html
+++ b/krimis/bannalec.html
@@ -50,7 +50,7 @@ die Bretagne und Krimi mit viel Lokalkolorit.</p>
   <li>2017: <em>Bretonisches Leuchten</em></li>
   <li>2018: <em>Bretonische Geheimnisse</em></li>
   <li>2019: <em>Bretonisches Vermächtnis</em></li>
-  <li>2020: Bretonische Spezialitäten</li>
+  <li>2020: <em>Bretonische Spezialitäten</em></li>
   <li>2021: Bretonische Idylle</li>
 </ul>
 
