--- a/krimis/bannalec.html
+++ b/krimis/bannalec.html
@@ -51,7 +51,7 @@ die Bretagne und Krimi mit viel Lokalkolorit.</p>
   <li>2018: <em>Bretonische Geheimnisse</em></li>
   <li>2019: <em>Bretonisches Vermächtnis</em></li>
   <li>2020: <em>Bretonische Spezialitäten</em></li>
-  <li>2021: Bretonische Idylle</li>
+  <li>2021: <em>Bretonische Idylle</em></li>
 </ul>
 
 <!-- previous and next page -->
