--- a/krimis/follett.html
+++ b/krimis/follett.html
@@ -70,6 +70,7 @@ ist ein britische Autor: <a href="https://ken-follett.com" target="_blank">Homep
   <li>2001: Jackdaws (dt. <a href="https://de.wikipedia.org/wiki/Die_Leopardin" target="_blank">Die Leopardin</a>)</li>
   <li>2002: Hornet Flight (dt. <a href="https://de.wikipedia.org/wiki/Mitternachtsfalken" target="_blank">Mitternachtsfalken</a>)</li>
   <li>2004: Whiteout (dt. <a href="https://de.wikipedia.org/wiki/Eisfieber_(Roman)" target="_blank">Eisfieber</a>)</li>
+  <li>2021: Never (dt. Never)</li>
 </ul>
 
 <!-- previous and next page -->
