--- a/krimis/connelly.html
+++ b/krimis/connelly.html
@@ -82,7 +82,7 @@ Angeles, bei dem Connelly als Reporter eine Woche volontierte.</p>
   <li>2017: <em>Two Kinds of Truth</em> (mit Michael Haller)</li>
   <li>2018: <em>Dark Sacred Night</em> (mit Renée Ballard) (dt. <a href="https://de.wikipedia.org/wiki/Night_Team" target="_blank">Night Team</a>)</li>
   <li>2019: <em>The Night Fire</em> (mit Renée Ballard und Michael Haller)</li>
-  <li>2021: The Dark Hours (mit Renée Ballard)</li>
+  <li>2021: <em>The Dark Hours</em> (mit Renée Ballard)</li>
 </ul>
 
 <h4 id="michael-haller-reihe">Michael-Haller-Reihe</h4>
@@ -104,7 +104,7 @@ Angeles, bei dem Connelly als Reporter eine Woche volontierte.</p>
   <li>2017: <em>The Late Show</em> (dt. Late Show)</li>
   <li>2018: <em>Dark Sacred Night</em> (mit Harry Bosch) (dt. <a href="https://de.wikipedia.org/wiki/Night_Team" target="_blank">Night Team</a>)</li>
   <li>2019: <em>The Night Fire</em> (mit Harry Bosch)</li>
-  <li>2021: The Dark Hours (mit Harry Bosch)</li>
+  <li>2021: <em>The Dark Hours</em> (mit Harry Bosch)</li>
 </ul>
 
 <h4 id="jack-mcevoy-reihe">Jack-McEvoy-Reihe</h4>
