--- a/krimis.html
+++ b/krimis.html
@@ -95,6 +95,7 @@
         <li><a href="/krimis/turow">Scott Turow</a></li>
         <li><a href="/krimis/verdon">John Verdon</a></li>
         <li><a href="/krimis/winslow">Don Winslow</a></li>
+        <li><a href="/krimis/wood">Tom Wood</a></li>
       </ul>
       <hr />
 
