--- a/krimis/weitere.html
+++ b/krimis/weitere.html
@@ -41,7 +41,8 @@
 <nav class="nav">
 	<div class="nav-right">
 	
-	<a class="active" href="winslow">&lt; Don Winslow</a>
+	<a class="active" href="wood">&lt; Tom Wood</a>
+	
 	
 	
 	</div>
