--- a/krimis/wood.html
+++ b/krimis/wood.html
@@ -37,8 +37,8 @@ ist ein britischer Autor: <a href="https://tomwoodbooks.com" target="_blank">Hom
 <ul>
   <li>2011: <em>The Hunter</em> (dt. Codename Tesseract)</li>
   <li>2012: Bad Luck in Berlin (dt. Victor)</li>
-  <li>2012: The Enemy (dt. Zero Option)</li>
-  <li>2013: The Game (dt. The Game)</li>
+  <li>2012: <em>The Enemy</em> (dt. Zero Option)</li>
+  <li>2013: <em>The Game</em> (dt. The Game)</li>
   <li>2014: Better Off Dead (dt. Kill Shot)</li>
   <li>2015: The Darkest Day (dt. Dark Day)</li>
   <li>2016: A Time to Die (dt. Cold Killing)</li>
