erste Fassung des Index von Studers Buch

--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
 	</div>
 </div>
 	 <footer class="is-right">
-		 <a class="button primary outline" href="index.html"
-			 target="">Demnächst</a>
+		 <a class="button primary outline" href="studer.html" target="">Öffnen</a>
   </footer>
 </div>
 
