--- a/studer/studerU.html
+++ b/studer/studerU.html
@@ -16,7 +16,7 @@
 	<div class="logo is-center is-vertical-align">
 		<a href="/index.html"> <img src="/img/mixc.svg" alt="Banner
 			Miscellanea"></a> 
-		<h4 class="text-grey"> Index zu <em>Reisende der Weltrevolution</em></h4>
+		<h4 class="text-grey"> Index zu <em>Reisende der Weltrevolution</em> - U</h4>
  	</div>
 	<hr style="height:2px; margin-top:8px; margin-bottom:0px;"/>
 </div>
@@ -27,37 +27,42 @@
 						<a class="active" href="/index.html">⌾ Startseite</a>
 					</div>
 			</nav>		
-      <p>Diese Seiten enthalten das Personenregister zu <a href="https://de.wikipedia.org/wiki/Brigitte_Studer" target="_blank">Brigitte Studer</a>: <em>Reisende der Weltrevolution. Eine Globalgeschichte der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Kommunistischen Internationale</a></em>, Suhrkamp 2020.</p>
-
-<p>Die Einträge im Index werden ergänzt durch kurze Angaben darüber, wie
-die Person im Buch vorkommt. Personen, die im Buch besonders ausführlich
-vorkommen, sind kursiv hervorgehoben. Die Einträge haben Links zur Wikipedia und
-weiteren Quellen mit biografischen Angaben.</p>
+      <h2 id="u">U</h2>
 
 <ul>
-  <li><a href="/studer/studerA">A Abdelkader - Auden</a></li>
-  <li><a href="/studer/studerB">B Bai Chongxi - Brutzkus</a></li>
-  <li><a href="/studer/studerC">C Caballero - Crispien</a></li>
-  <li><a href="/studer/studerD">D Dahlem - Dutt</a></li>
-  <li><a href="/studer/studerE">E Ebenhoech - Ežov</a></li>
-  <li><a href="/studer/studerF">F Fazekas - Fürstenberg</a></li>
-  <li><a href="/studer/studerG">G Gandhi - Gyptner</a></li>
-  <li><a href="/studer/studerH">H Hadj - Hurtado</a></li>
-  <li><a href="/studer/studerIJ">IJ Ibárruri - Jurr</a></li>
-  <li><a href="/studer/studerK">K Kaetzler - Kuusinen</a></li>
-  <li><a href="/studer/studerL">L La Guma - Luxemburg</a></li>
-  <li><a href="/studer/studerM">M Machado - Musy</a></li>
-  <li><a href="/studer/studerN">N Narbutabekow - Norden</a></li>
-  <li><a href="/studer/studerO">O Oesterreich - Ozaki</a></li>
-  <li><a href="/studer/studerPQ">PQ Padmore - Quelch</a></li>
-  <li><a href="/studer/studerR">R Rabaté - Rylski</a></li>
-  <li><a href="/studer/studerS">S Šabanova - Swierczewski</a></li>
-  <li><a href="/studer/studerT">T Tab Pingshan - Tzara</a></li>
-  <li><a href="/studer/studerU">U Uhse - Uribe</a></li>
-  <li><a href="/studer/studerV">V Vaillant-Couturier - Vujović</a></li>
-  <li><a href="/studer/studerWX">WX Waldron - Xiang Zhongfa</a></li>
-  <li><a href="/studer/studerZ">Z Zaisser - Zörgiebel</a></li>
+  <li><a href="https://de.wikipedia.org/wiki/Bodo_Uhse" target="_blank"><strong>Uhse, Bodo</strong></a>
+  (1904–1963) 404 <br />
+  Deutscher Nationalsozialist, später KPD-Mitglied; arbeitete am <a href="https://de.wikipedia.org/wiki/Braunbuch#Braunbuch_1933" target="_blank">Braunbuch über Reichtagsbrand und Hitlerterror</a> mit (404).</li>
+  <li><span id="ulbricht"></span><a href="https://de.wikipedia.org/wiki/Walter_Ulbricht" target="_blank"><strong>Ulbricht, Walter</strong></a> (1893–1973) 28, 412, 484, 545 <br />
+  Deutscher Kommunist; trat im Pariser Volksfrontausschuss an die Stelle
+  <a href="studerM#münzenberg">→Münzenbergs</a>, nachdem dieser 1936 durch die
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> aller seiner Funktionen enthoben wurde (412) – einer der
+  Stalin loyalen Spitzenfunktionäre, die in der Sowjetunion Unterkunft fanden (545).</li>
+  <li><strong>Ulyanov, Vladimir</strong> <a href="studerL#lenin">→Lenin, Vladimir</a></li>
+  <li><strong>Undjus, Alice Margaret</strong>, »Daisy« 348 <br />
+  Für die <a href="https://de.wikipedia.org/wiki/Rote_Gewerkschafts-Internationale" target="_blank">Profintern</a> in Shanghai tätig, Frau von <a href="studerK#krumbein">→Charles Krumbein</a>.</li>
+  <li><a href="https://en.wikipedia.org/wiki/Vicente_Uribe" target="_blank"><strong>Uribe, Vicente</strong></a>
+  (1902–1961) 462, 519 <br />
+  Spanischer Kommunist; mit <a href="studerD#diaz">→José Díaz</a> und 
+  <a href="studerIJ#ibarruri">→Dolores Ibárruri</a> von der m4komintern 1932 in die
+  Parteiführung der <a href="https://de.wikipedia.org/wiki/Partido_Comunista_de_España" target="_blank">PCE</a> eingesetzt (462, 519).</li>
 </ul>
+
+<!-- previous and next page -->
+<nav class="nav">
+	<div class="nav-right">
+	
+	<a class="active" href="studerT">&lt; T</a>
+	
+	
+	<a class="active" href="../studer">A..Z</a>
+	
+	
+	<a class="active" href="studerV">V &gt;</a>
+	
+	</div>
+</nav>
+
 
 		<footer>
 	<hr style="height:2px; margin-top:24px; margin-bottom:8px;"/>
