--- a/studer/studerS.html
+++ b/studer/studerS.html
@@ -204,8 +204,9 @@ Schriftstellerkongresses zur Verteidigung der Kultur, siehe
   Kontakt zu kommunistischen Führern wie <a href="studerM#mao">→Mao Zedong</a>.</li>
   <li><strong>Sobelsohn, Karl</strong> <a href="studerR#radek">→Radek, Karl</a></li>
   <li><span id="sokolnikov"></span><a href="https://de.wikipedia.org/wiki/Grigori_Jakowlewitsch_Sokolnikow" target="_blank"><strong>Sokol’nikov, Grogorij</strong></a> (1888–1939) 113, 116 <br />
-  Russischer Kommunist; mit <a href="studerR#roy">→Roy</a> und m4slink(S,
-  safarov, Safarov) Leiter des Zentralasiatischen Büros der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
+  Russischer Kommunist; mit <a href="studerR#roy">→Roy</a> und 
+  <a href="studerS#safarov">→Safarov</a> Leiter des Zentralasiatischen Büros der 
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
   <li><strong>Sommerfeld, Hertha</strong> <a href="studerIJ#jurr">→Jurr, Hertha</a></li>
   <li><a href="https://de.wikipedia.org/wiki/Song_Qingling" target="_blank"><strong>Song Qingling</strong></a>
   (1893–1981) 275, 367, 368, 372, 375, 379, 383 <br />
