Neue Krimis + Verbesserungen Studer

--- a/krimis.html
+++ b/krimis.html
@@ -87,6 +87,7 @@
         <li><a href="/krimis/nunn">Malla Nunn</a></li>
         <li><a href="/krimis/paretsky">Sara Paretsky</a></li>
         <li><a href="/krimis/rankin">Ian Rankin</a></li>
+        <li><a href="/krimis/ribeiro">Gil Ribeiro</a></li>
         <li><a href="/krimis/russell">Craig Russell</a></li>
         <li><a href="/krimis/sears">Michael Sears</a></li>
         <li><a href="/krimis/silva">Daniel Silva</a></li>
