--- a/krimis/rankin.html
+++ b/krimis/rankin.html
@@ -97,7 +97,7 @@ ist ein britischer Autor: <a href="https://www.ianrankin.net" target="_blank">Ho
 	
 	
 	
-	<a class="active" href="russell">Craig Russell &gt;</a>
+	<a class="active" href="ribeiro">Gil Ribeiro &gt;</a>
 	
 	</div>
 </nav>
