--- a/krimis/ribeiro.html
+++ b/krimis/ribeiro.html
@@ -16,7 +16,7 @@
 	<div class="logo is-center is-vertical-align">
 		<a href="/index.html"> <img src="/img/mixc.svg" alt="Banner
 			Miscellanea"></a> 
-		<h4 class="text-grey"> Krimiserien - Lee Child</h4>
+		<h4 class="text-grey"> Krimiserien - Gil Ribeiro</h4>
  	</div>
 	<hr style="height:2px; margin-top:8px; margin-bottom:0px;"/>
 </div>
@@ -27,52 +27,28 @@
 						<a class="active" href="/index.html">⌾ Startseite</a>
 					</div>
 			</nav>		
-      <h2 id="lee-child">Lee Child</h2>
+      <h2 id="gil-ribeiro">Gil Ribeiro</h2>
 
-<p><a href="https://de.wikipedia.org/wiki/Lee_Child" target="_blank">Lee Child</a>
-ist ein britisch-amerikanischer Autor, der die Figur des ehemaligen
-Militärpolizisten <a href="https://de.wikipedia.org/wiki/Jack_Reacher_(Romanfigur)" target="_blank">Jack Reacher</a> ersonnen hat.</p>
+<p><a href="https://de.wikipedia.org/wiki/Holger_Karsten_Schmidt" target="_blank">Gil Ribeiro</a> (eiggentlich Holger Karsten Schmidt) ist ein deutscher Autor.</p>
 
-<h4 id="jack-reacher-reihe">Jack-Reacher-Reihe</h4>
+<h4 id="leander-lost-reihe">Leander-Lost-Reihe</h4>
 
 <ul>
-  <li>1997: <em>Killing Floor</em> (dt. Größenwahn)</li>
-  <li>1998: <em>Die Trying</em> (dt. <a href="https://de.wikipedia.org/wiki/Ausgeliefert_(Roman)" target="_blank">Ausgeliefert</a>)</li>
-  <li>1999: <em>Tripwire</em> (dt. Sein wahres Gesicht)</li>
-  <li>2000: <em>Running Blind</em> (dt. Zeit der Rache)</li>
-  <li>2001: <em>Echo Burning</em> (dt.In letzter Sekunde)</li>
-  <li>2002: <em>Without Fail</em> (dt. Tödliche Absicht)</li>
-  <li>2003: <em>Persuader</em> (dt. Der Janusmann)</li>
-  <li>2004: <em>The Enemy</em> (dt. Die Abschussliste)</li>
-  <li>2005: <em>One Shot</em> (dt. Sniper)</li>
-  <li>2006: <em>The Hard Way</em> (dt. Way Out)</li>
-  <li>2007: <em>Bad Luck and Trouble</em> (dt. Trouble)</li>
-  <li>2008: <em>Nothing to Lose</em> (dt. Outlaw)</li>
-  <li>2009: <em>Gone Tomorrow</em> (dt. Underground)</li>
-  <li>2010: <em>61 Hours</em> (dt. 61 Stunden)</li>
-  <li>2010: <em>Worth Dying For</em> (dt. Wespennest)</li>
-  <li>2011: <em>The Affair</em> (dt. Der letzte Befehl)</li>
-  <li>2012: <em>A Wanted Man</em> (dt. Der Anhalter)</li>
-  <li>2013: <em>Never go back</em> (dt. Die Gejagten)</li>
-  <li>2014: <em>Personal</em> (dt. Im Visier)</li>
-  <li>2015: <em>Make Me</em> (dt. Keine Kompromisse)</li>
-  <li>2016: <em>Night School</em>  (dt. Der Ermittler)</li>
-  <li>2017: <em>The Midnight Line</em> (dt. Der Bluthund)</li>
-  <li>2018: <em>Past Tense</em></li>
-  <li>2019: <em>Blue Moon</em></li>
-  <li>2020: <em>Sentinel</em></li>
-  <li>2021: <em>Better Off Dead</em></li>
+  <li>2017: <em>Lost in Fuseta</em></li>
+  <li>2018: <em>Lost in Fuseta – Spur der Schatten</em></li>
+  <li>2019: Weiße Fracht – Lost in Fuseta</li>
+  <li>2020: Schwarzer August – Lost in Fuseta</li>
 </ul>
 
 <!-- previous and next page -->
 <nav class="nav">
 	<div class="nav-right">
 	
-	<a class="active" href="charyn">&lt; Jerome Charyn</a>
+	<a class="active" href="rankin">&lt; Ian Rankin</a>
 	
 	
 	
-	<a class="active" href="coben">Harlan Coben &gt;</a>
+	<a class="active" href="russell">Craig Russell &gt;</a>
 	
 	</div>
 </nav>
