--- a/studer/studerE.html
+++ b/studer/studerE.html
@@ -33,7 +33,9 @@
   <li><strong>Ebenhoech, Frieda</strong> <a href="studerWX#wolf-ferrari">→Wolf-Ferrari, Frieda</a></li>
   <li><span id="eberlein"></span><a href="https://de.wikipedia.org/wiki/Hugo_Eberlein" target="_blank"><strong>Eberlein, Hugo</strong></a>
   (1887–1941) »Daniel Nielsen«, »Ernst« 19, 171, 360, 422, 431, 451 <br />
-  Vertreter der KPD beim Gründungskongress der Komintern; Vorsitzender
+  Deutscher Kommunist; Vertreter der KPD beim Gründungskongress der
+  Komintern mit dem Mandat gegen die Gründung, weil verfrüht, zu stimmen
+  (19), Vorsitzender
   der Revisionskommission des Westeuorpäischen Komitees (WEB) der
   Komintern; 1928 als Verwalter von Komintern-Geldern in Shanghai; auch
   zuständig für die Finanzen der Pressewesens der Komintern; 1937 in
