--- a/studer/studerG.html
+++ b/studer/studerG.html
@@ -118,6 +118,11 @@
   Mitarbeiterin des Westeuropäischen Sekretariats der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Josef_Romualdowitsch_Grigulewitsch" target="_blank"><strong>Grigulevič, Iosif</strong></a> (1913–1988) 473, 525 <br />
   Sowjetischer Agent litauischer Herkunft, 1936 in Spanien.</li>
+  <li><strong>Grimm-Schlain, Rosa</strong> (1875–1955) 9 <br />
+  Russisch-schweizerische Kommunistin; einer der Gründerinnen der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_der_Schweiz" target="_blank">KPS</a>
+  und später zeitweise Angestellte der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in Moskau (9); siehe
+  auch <a href="https://rosalux-geneva.org/de/rosa-grimm/" target="_blank">»Rote Rosa
+  Nr.1« – die revolutionäre Frau</a>.</li>
   <li><span id="gröhl"></span> <a href="https://de.wikipedia.org/wiki/Karl_Retzlaw" target="_blank"><strong>Gröhl, Karl</strong></a> 
   (später Retzlaw) (1896–1979) »Karl Friedberg« 143, 147, 149, 150, 151,
   155, 157, 159, 416, 417, 418, 419, 420 <br />
