--- a/studer/studerH.html
+++ b/studer/studerH.html
@@ -135,11 +135,11 @@
   438, 441, 460, 461, 479, 510, 511, 529, 531, 532, 535, 537, 539, 540,
   549, 550 <br />
   Schweizer Kommunist; Vertreter des linken Flügels der Schweizer
-  Sozialdemokratie auf dem II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>; 1921 beim 3.
-  Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> zu einem von drei Sekretären gewählt;
-  Mitgründer der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_der_Schweiz" target="_blank">KPS</a>; sympathisierte mit <a href="studerB#bucharin">→Bucharin</a> und kritisierte den ultralinken Kurs der m4komintern ab
-  1928 und die schwindende interne Demokratie; als Emmissär in Spanien;
-  1943 wurde Humbert-Droz aus der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_der_Schweiz" target="_blank">KPS</a> ausgeschlossen; später
+  Sozialdemokratie auf dem II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, 1921 beim III.
+  Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> zu einem von drei Sekretären des EKKI gewählt (22),
+  Mitgründer der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_der_Schweiz" target="_blank">KPS</a>, sympathisierte mit <a href="studerB#bucharin">→Bucharin</a> und kritisierte den ultralinken Kurs der m4komintern ab
+  1928 und die schwindende interne Demokratie, als Emmissär in Spanien,
+  1943 wurde Humbert-Droz aus der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_der_Schweiz" target="_blank">KPS</a> ausgeschlossen, später
   Zentralsekretär der Sozialdemokratischen Partei der Schweiz.</li>
   <li><a href="https://de.wikipedia.org/wiki/Jenny_Humbert-Droz" target="_blank"><strong><em>Humbert-Droz, Jenny</em></strong></a>
   (1892–2000) 30, 65, 67, 129, 130, 162–165, 365, 423, 425, 438, 461,
