--- a/studer/studerK.html
+++ b/studer/studerK.html
@@ -245,8 +245,8 @@
   in den USA.</li>
   <li><a href="https://de.wikipedia.org/wiki/Otto_Wille_Kuusinen" target="_blank"><strong>Kuusinen, Otto</strong></a>
   (1881–1964) 22, 165, 166, 231, 257, 333, 458, 522<br />
-  Finnischer Kommunist, 1923 Sekretär der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>; griff
-  <a href="studerR#roy">→Roy</a> auf dem 6. Weltkongress der KI an, er
+  Finnischer Kommunist; 1921 auf dem III. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> als Sekretär des EKKI angestellt (22),  griff
+  <a href="studerR#roy">→Roy</a> auf dem VI. Weltkongress der KI an, er
   vertrete eine »trotzkistische Linie«.</li>
 </ul>
 
