--- a/studer/studerL.html
+++ b/studer/studerL.html
@@ -58,7 +58,8 @@
   <li><span id="lenin"></span><a href="https://de.wikipedia.org/wiki/Wladimir_Iljitsch_Lenin" target="_blank"><strong>Lenin, Vladimir</strong></a> (geb. Uljanov) (1870–1924) 15, 17, 18, 31, 47, 58,
   69, 74, 81, 82, 85, 88, 92, 93, 95, 102, 106, 107, 110, 117, 142, 145,
   224, 322, 407 <br />
-  Lenins Buch
+  Mit <a href="studerT#trotzki">→Trotzki</a> Autor des Gründungsmanifests der 
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> 1919 (15, 17f), Lenins Buch
   <a href="https://de.wikipedia.org/wiki/Der_„Linke_Radikalismus“,_die_Kinderkrankheit_im_Kommunismus" target="_blank">Der „Linke Radikalismus“, die Kinderkrankheit im Kommunismus</a>
   bildete die Grundlage der Beschlüsse des II. Weltkongresses der
   <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>; im Unterschied zu <a href="studerR#roy">→Roy</a> war Lenin
@@ -80,7 +81,9 @@ Deutscher Seemann, in Shanghai als
 <a href="https://de.wikipedia.org/wiki/Otdel_meschdunarodnych_swjasei" target="_blank">OMS</a>-Mitarbeiter aktiv.</li>
   <li><a href="https://de.wikipedia.org/wiki/Paul_Levi" target="_blank"><strong>Levi, Paul</strong></a> (1883–1930)
   21, 67, 69, 82, 85, 88, 89 <br />
-  Deutscher Kommunist, Mitbegründer der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a>, Teilnehmer am II.
+  Deutscher Kommunist; wollte das Exekutivkomitee der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (EKKI)
+  nicht wie die Bolschewiki zu einem permanenten Organg machen (21),
+  Mitbegründer der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a>, Teilnehmer am II.
   Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Max_Levien" target="_blank"><strong>Levien, Max</strong></a>
   (1885–1937) 210 <br />
@@ -157,7 +160,7 @@ Deutscher Seemann, in Shanghai als
   die Bolschewiki eine Massenpartei waren, die Organisation von den
   Bolschewiki dominiert würde. »Sie war nicht gegen die Gründung einer
   neuen Internationale, wollte aber zuerst die Entstehung
-  kommunistischer Parteien in Westeuropa abwarten.«</li>
+  kommunistischer Parteien in Westeuropa abwarten.« (19)</li>
 </ul>
 
 <!-- previous and next page -->
