--- a/studer/studerPQ.html
+++ b/studer/studerPQ.html
@@ -127,21 +127,23 @@
   Verlagsgeldern und Plagiat vor.</li>
   <li><a href="https://de.wikipedia.org/wiki/Ossip_Aronowitsch_Pjatnizki" target="_blank"><strong>Pjatnickij, Osip</strong></a> (1882–1938) 22, 153, 156, 165, 177, 226, 359, 407,
   415, 531, 537?, 543 <br />	
-  Russischer Kommunist; Mitglied des EKKI, Finanzchef der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>,
+  Russischer Kommunist; 1921 als Vertreter der Bolschewiki den
+  Sekretären des EKKI zugeordnet (22),  Finanzchef der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>,
   als solcher beschuldigte er <a href="studerR#reich">→Jakov Reich</a> der
-  Unterschlagung; Pjatnickij wurde nach einem Prozess 1938 hingerichtet.</li>
+  Unterschlagung, Pjatnickij wurde nach einem Prozess 1938 hingerichtet.</li>
   <li><a href="https://de.wikipedia.org/wiki/Fritz_Platten" target="_blank"><strong>Platten, Fritz</strong></a>
   (1883–1942) 210, 366 <br />
   Schweizer Kommunist; hat die Identität »Paul und Gertrud Rüegg« für
-  die in China verhafteten Komintern-Funktionäre <a href="studerM#moiseenko">→Tatjana Moiseenko-Velikaja</a> und m4slink(<code class="language-plaintext highlighter-rouge">R', </code>rudnik’,
-  Jakov Rudnik).</li>
+  die in China verhafteten Komintern-Funktionäre <a href="studerM#moiseenko">→Tatjana Moiseenko-Velikaja</a> und 
+  <a href="studerR#rudnik">→Jakov Rudnik</a>.</li>
   <li><a href="https://en.wikipedia.org/wiki/John_Pepper" target="_blank"><strong>Pogány, Jószef</strong></a>
   (1886–1938), »John Pepper« 289, 330 <br />
   Ungarischer Kommunist; sprach sich gegen den von Stalin befürworteten
   Aufstand 1927 im chinesischen Guangzhou, den <a href="studerN#neumann">→Neumann</a> und m4slink(L, lominadze, Lominadze) organisierten.</li>
   <li><a href="https://de.wikipedia.org/wiki/Blagoi_Popow" target="_blank"><strong>Popov, Blagoi</strong></a>
   (1902–1968) 171 <br />
-  Bulgarischer Kommunist; mit <a href="studerD#dimitrov">→Dimitrov</a> im
+  Bulgarischer Kommunist; mit 
+  <a href="studerD#dimitrov">→Dimitrov</a> im
   Reichstagsbrandprozess angeklagt.</li>
   <li><strong>Poretzky, Elisabeth</strong> 361 <br />
   Frau von <a href="studerP#poretsky">→Nathan Poretsky</a>.</li>
