--- a/studer/studerR.html
+++ b/studer/studerR.html
@@ -53,8 +53,8 @@
   Paris zuständig für die Überporüfung deutscher Spanienkämpfer.</li>
   <li><a href="https://de.wikipedia.org/wiki/Mátyás_Rákosi" target="_blank"><strong>Ràkosi, Mátyás</strong></a>
   (1892–1971) 22, 250? <br />
-  Ungarischer Kommunist; auf dem 3. Weltkongress als Sekretär der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> angestellt.</li>
+  Ungarischer Kommunist; auf dem III. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> als 
+  Sekretär des EKKI angestellt (22).</li>
   <li><strong>Rakov, Paul</strong> (1901–1937) 359 <br />
   Deutsch-russischer Kommunist; 1927 zur Untersützung der OMS-Stelle
   nach Shanghai geschickt.</li>
@@ -72,7 +72,8 @@
   Spanien tätig.</li>
   <li><span id="reed"></span><a href="https://de.wikipedia.org/wiki/John_Reed" target="_blank"><strong>Reed, John</strong></a>
   (1870–1920) 16, 59, 61, 63, 70, 72, 94, 97, 102, 111–113, 125, 132 <br />
-  Autor von <em>Zehn Tage, die die Welt erschütterten</em>, Kritiker der
+  Amerikanischer Kommunist; Autor von <em>Zehn Tage, die die Welt erschütterten</em> (16), 
+  Kritiker der
   Zulassung von <a href="studerC#cachin">→Marcel Cachin</a> zum II.
   Weltkongress der Komintern, erkrankte vermutlich beim
   <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> in Baku tödlich an Typhus,
@@ -151,8 +152,8 @@
   <li><span id="roye"></span><strong><em>Roy, Evelyn Trent</em></strong> (1892–1970) »Santi Devi« 	
   13, 14, 30, 60, 64–66, 79, 85, 105, 106, 117, 127, 128, 131, 181,
   202–204, 207, 208, 238, 241, 246, 251–254, 534, 547 <br />
-  Amerikanerin; Gefährtin von <a href="studerR#roy">→Roy</a>, Teilnehmerin am II.
-  Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, Mitgründerin der Kommmunistischen Partei
+  Amerikanische Kommunistin; Gefährtin von <a href="studerR#roy">→Roy</a>, Teilnehmerin am II.
+  Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (13f), Mitgründerin der Kommmunistischen Partei
   Indiens, Dozentin an der Kommunistischen Universität der Erwerbstätigen
   des Ostens (KUTV) in Moskau, Korrespondentin der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>,
   Herausgeberin von <em>The Vanguard</em>, der Exilzeitung der indischen KP.
@@ -167,8 +168,8 @@
   202–204, 206–209, 211, 214, 231, 232, 236–238, 241–243, 246–249,
   251–254, 257, 282, 289, 290, 295, 297–302, 308–311, 313–315, 319–329,
   331–334, 338, 343, 349, 549, 527, 528, 534, 547, 548 <br />
-  Bengalischer indischer Aktivist; Teilnehmer mehrerer Weltkongresse der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, Lenin forderte Roy auf auf dem II. Weltkongress zu seinen
+  Bengalischer indischer Aktivist; Teilnehmer am II. Weltkongress der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (13f), Lenin forderte Roy auf auf dem II. Weltkongress zu seinen
   Thesen zur Kolonialfrage einen Ergänzungsentwurf zu formulieren, in
   denen Roy die Allianz von Kommunisten mit der nationalen Bourgeoisie
   (im Unterschied zu Lenin) ablehnte, hielt den <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku für »Zinov’evs
