--- a/studer/studerT.html
+++ b/studer/studerT.html
@@ -147,7 +147,7 @@
   <li><span id="trotzki"></span><a href="https://de.wikipedia.org/wiki/Leo_Trotzki" target="_blank"><strong>Trotzki, Leon</strong></a>
   (1879–1940) 15, 31, 47, 72, 81, 83, 88, 95, 100, 116, 145, 155, 247,
   304, 317, 329, 411, 503, 511, 525, 541, 542, 548 <br />
-  Mit <a href="studerL#lenin">→Lenin</a> Autor des Manifest des
+  Mit <a href="studerL#lenin">→Lenin</a> Autor des Manifests des
   Gründungskongresses der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (15) – hatte überragende Autorität
   zur Zeit des II. Weltkongresses (47, 88) – sorgte sich persönlich um
   die Unterkunft der Delegierten des II. Weltkongresses (72) – wollte
