--- a/krimis/ribeiro.html
+++ b/krimis/ribeiro.html
@@ -29,7 +29,7 @@
 			</nav>		
       <h2 id="gil-ribeiro">Gil Ribeiro</h2>
 
-<p><a href="https://de.wikipedia.org/wiki/Holger_Karsten_Schmidt" target="_blank">Gil Ribeiro</a> (eiggentlich Holger Karsten Schmidt) ist ein deutscher Autor.</p>
+<p><a href="https://de.wikipedia.org/wiki/Holger_Karsten_Schmidt" target="_blank">Gil Ribeiro</a> (eigentlich Holger Karsten Schmidt) ist ein deutscher Autor.</p>
 
 <h4 id="leander-lost-reihe">Leander-Lost-Reihe</h4>
 
