Neues Buch von C. J. Box

--- a/krimis/box.html
+++ b/krimis/box.html
@@ -71,6 +71,7 @@ Wikipedia</a>.</p>
   <li>2019: <em>Wolf Pack</em></li>
   <li>2020: <em>Long Range</em></li>
   <li>2021: <em>Dark Sky</em></li>
+  <li>2022: <em>Shadows Reel</em></li>
 </ul>
 
 <h4 id="cassie-dewell-reihe">Cassie-Dewell-Reihe</h4>
